# blog-partners-auto

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
bible/: characters.md  series_bible.md  story_principles.md  style_guide.md
blog/: blog_guide.md
characters/character_sheets/: ash.md  duchess.md  luna.md  milo.md
characters/shot_keyframes/ep01/: kling_prompts.md
characters/shot_keyframes/ep02/: kling_prompts.md
characters/shot_keyframes/ep03/: kling_prompts.md
characters/shot_keyframes/ep04/: kling_prompts.md
characters/shot_keyframes/ep05/: kling_prompts.md
characters/shot_keyframes/ep06/: kling_prompts.md
docs/: blog_guide.md  channel_ideas.md  director_guide.md  kling_workflow_guide.md  progress.md  story_guide.md  video_guide.md  visual_guide.md
logs/: active.md  ember-s1.md  harem-s1.md
scripts/: generate_characters.py  generate_expressions.py  generate_keyframes_all.py  generate_keyframes_ep01.py  generate_preproduction.py  regenerate_consistent.py
scripts/season1/: ep_01_script.md  ep_02_script.md  ep_03_script.md  ep_04_script.md  ep_05_script.md  ep_06_script.md  ep_07_script.md  ep_08_script.md  ep_09_script.md  ep_10_script.md
src/blog_partners_auto/: __init__.py  flow.py  main.py  state.py
tests/: test_flow.py
video/: story_guide.md  story_principles.md
video/ember-s1/: generate_characters.py  generate_expressions.py  generate_keyframes_all.py  generate_keyframes_ep01.py  generate_preproduction.py  regenerate_consistent.py
video/harem-s1/: generate_characters.py  generate_ep01_scenes.py
(+86 files in other folders)
