[project]
name = "blog-partners-auto"
version = "0.1.0"
description = "Multi-language blog and YouTube Shorts content automation using CrewAI"
requires-python = ">=3.10"
dependencies = [
    "crewai[tools]>=0.100.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
integrations = [
    "deepl>=1.17",
    "google-api-python-client>=2.0",
    "google-genai>=1.0",
    "openai>=1.30",
]

[project.scripts]
blog-partners = "blog_partners_auto.main:run"
blog-partners-plot = "blog_partners_auto.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blog_partners_auto"]

[tool.ruff]
line-length = 100
target-version = "py310"
